<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



   <LinearLayout
       android:id="@+id/Linear_layout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_Nombre"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_Nombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/Nombre"
             android:inputType="text" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_fecha"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_fecha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
             android:focusable="false"
             android:hint="@string/Fecha"
             android:inputType="date"
             android:textStyle="italic" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_telefono"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_telefono"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/Telefono"
             android:inputType="phone"
             android:textStyle="italic"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/email"
             android:inputType="text"
             android:textStyle="italic"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_descripcion"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_descripcion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/descripcion"
             android:inputType="textImeMultiLine"
             android:textStyle="italic"/>

      </com.google.android.material.textfield.TextInputLayout>


   </LinearLayout>

   <Button
       android:id="@+id/bt_siguiente"
       android:layout_width="203dp"
       android:layout_height="wrap_content"
       android:layout_below="@+id/Linear_layout"
       android:layout_alignParentStart="true"
       android:layout_alignParentEnd="true"
       android:layout_centerHorizontal="true"
       android:layout_marginStart="108dp"
       android:layout_marginTop="60dp"
       android:layout_marginEnd="100dp"
       android:text="@string/boton_siguiente" />


</RelativeLayout>